# wildpath

./: Cargo.toml  README.md  wasmer.toml
src/: lib.rs
wildpath/: .gitignore  Cargo.toml  LICENSE  README.md
wildpath-cli/: Cargo.toml
wildpath-cli/src/: main.rs
wildpath-component/: Cargo.toml
wildpath-component/src/: bindings.rs  main.rs
wildpath/src/: lib.rs
wildpath/wildpath/: Cargo.toml
wildpath/wildpath-cli/src/: main.rs
wildpath/wildpath/src/: lib.rs
